tests/idris2/interface015/expected
1/1: Building gnu (gnu.idr)
Error: While processing right hand side of TestSurprise1. Multiple solutions found in search of:
    Gnu

gnu:47:27--47:32
 43 | 
 44 | ||| This is the meat. I'd expect this function to raise an error
 45 | ||| because it is ambiguous which local/local function to use.
 46 | TestSurprise1 : (gnu1, gnu2 : Gnu) -> String
 47 | TestSurprise1 gnu1 gnu2 = Guess
                                ^^^^^

Possible correct results:
    gnu1
    gnu2
Error: While processing right hand side of TestSurprise2. Multiple solutions found in search of:
    Gnu

gnu:50:21--50:26
 46 | TestSurprise1 : (gnu1, gnu2 : Gnu) -> String
 47 | TestSurprise1 gnu1 gnu2 = Guess
 48 | 
 49 | TestSurprise2 : (f,g : Unit -> Gnu) -> String
 50 | TestSurprise2 f g = Guess
                          ^^^^^

Possible correct results:
    f ()
    g ()
Error: While processing right hand side of TestSurprise3. Can't find an implementation for Gnu.

gnu:53:19--53:24
 49 | TestSurprise2 : (f,g : Unit -> Gnu) -> String
 50 | TestSurprise2 f g = Guess
 51 | 
 52 | TestSurprise3 : (Unit -> Gnu, Unit -> Gnu) -> String
 53 | TestSurprise3 f = Guess
                        ^^^^^

